--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 
                 <executions>
                     <execution>
-                        <id>default-tests</id>
+                        <id>default-test</id>
 
                         <phase>test</phase>
 
