--- a/pom.xml
+++ b/pom.xml
@@ -43,19 +43,23 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <!-- Dependency management -->
+        <spring-boot-dependencies.version>2.0.6.RELEASE</spring-boot-dependencies.version>
+        <spring-cloud-dependencies.version>Edgware.SR5</spring-cloud-dependencies.version>
+
         <!-- Dependency configuration -->
-        <org.apache.maven.plugins.maven-compiler-plugin.version>3.8.0</org.apache.maven.plugins.maven-compiler-plugin.version>
-        <org.ow2.asm.asm.version>6.2.1</org.ow2.asm.asm.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <asm.version>6.2.1</asm.version>
 
         <!-- Plugin configuration -->
-        <org.apache.maven.plugins.maven-failsafe-plugin.version>2.22.0</org.apache.maven.plugins.maven-failsafe-plugin.version>
-        <org.apache.maven.plugins.maven-javadoc-plugin.version>3.0.1</org.apache.maven.plugins.maven-javadoc-plugin.version>
-        <org.apache.maven.plugins.maven-gpg-plugin.version>1.6</org.apache.maven.plugins.maven-gpg-plugin.version>
-        <org.apache.maven.plugins.maven-source-plugin.version>3.0.1</org.apache.maven.plugins.maven-source-plugin.version>
-        <org.apache.maven.plugins.maven-surefire-plugin.version>2.22.0</org.apache.maven.plugins.maven-surefire-plugin.version>
-        <org.codehaus.mojo.versions-maven-plugin.version>2.5</org.codehaus.mojo.versions-maven-plugin.version>
-        <org.jacoco.jacoco-maven-plugin.version>0.8.2</org.jacoco.jacoco-maven-plugin.version>
-        <org.sonatype.plugins.nexus-staging-maven-plugin.version>1.6.8</org.sonatype.plugins.nexus-staging-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
+        <maven-failsafe-plugin.version>2.22.1</maven-failsafe-plugin.version>
+        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+        <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -64,7 +68,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.0.5.RELEASE</version>
+                <version>${spring-boot-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -73,7 +77,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.RELEASE</version>
+                <version>${spring-cloud-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -89,13 +93,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${org.apache.maven.plugins.maven-compiler-plugin.version}</version>
+                <version>${maven-compiler-plugin.version}</version>
 
                 <dependencies>
+                    <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>${org.ow2.asm.asm.version}</version>
+                        <version>${asm.version}</version>
                     </dependency>
                 </dependencies>
 
@@ -108,14 +113,14 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>${org.codehaus.mojo.versions-maven-plugin.version}</version>
+                <version>${versions-maven-plugin.version}</version>
             </plugin>
 
             <!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>${org.sonatype.plugins.nexus-staging-maven-plugin.version}</version>
+                <version>${nexus-staging-maven-plugin.version}</version>
 
                 <extensions>true</extensions>
 
@@ -130,13 +135,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${org.apache.maven.plugins.maven-surefire-plugin.version}</version>
+                <version>${maven-surefire-plugin.version}</version>
 
                 <dependencies>
+                    <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>${org.ow2.asm.asm.version}</version>
+                        <version>${asm.version}</version>
                     </dependency>
                 </dependencies>
 
@@ -167,7 +173,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${org.apache.maven.plugins.maven-failsafe-plugin.version}</version>
+                <version>${maven-failsafe-plugin.version}</version>
 
                 <executions>
                     <execution>
@@ -192,7 +198,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${org.jacoco.jacoco-maven-plugin.version}</version>
+                <version>${jacoco-maven-plugin.version}</version>
 
                 <executions>
                     <execution>
@@ -225,7 +231,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>${org.apache.maven.plugins.maven-gpg-plugin.version}</version>
+                        <version>${maven-gpg-plugin.version}</version>
 
                         <executions>
                             <execution>
@@ -256,7 +262,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>${org.apache.maven.plugins.maven-source-plugin.version}</version>
+                        <version>${maven-source-plugin.version}</version>
 
                         <executions>
                             <execution>
@@ -273,7 +279,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${org.apache.maven.plugins.maven-javadoc-plugin.version}</version>
+                        <version>${maven-javadoc-plugin.version}</version>
 
                         <executions>
                             <execution>
