--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
                 <version>${versions-maven-plugin.version}</version>
             </plugin>
 
+            <!-- https://mvnrepository.com/artifact/com.amashchenko.maven.plugin/gitflow-maven-plugin -->
+            <plugin>
+                <groupId>com.amashchenko.maven.plugin</groupId>
+                <artifactId>gitflow-maven-plugin</artifactId>
+            </plugin>
+
             <!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
