--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
         <!-- Dependency management -->
         <spring-boot-dependencies.version>2.0.6.RELEASE</spring-boot-dependencies.version>
-        <spring-cloud-dependencies.version>Edgware.SR5</spring-cloud-dependencies.version>
+        <spring-cloud-dependencies.version>Finchley.SR1</spring-cloud-dependencies.version>
 
         <!-- Dependency configuration -->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
